fix spacing and refactor JSemotion to css

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -41,6 +41,22 @@ span {
   font-size: 2.86vw;
 }
 
+.engTxt {
+  font-family: moderat-meduim;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 3.125vw;
+  letter-spacing: 0.02em;
+}
+
+.thaiTxt {
+  font-family: BaiJamjuree-Regular;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 2.86vw;
+  letter-spacing: 0.02em;
+}
+
 @font-face {
   font-family: moderat-meduim;
   src: url(../font/Moderat-Medium.woff);
